solved dni too large validation, created new travel index for clients, created show view for travels, added discount to seeds

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,9 +17,17 @@
   font-family: "Rubik", sans-serif !important;
   font-size: 2rem !important;
 }
+.price-text-large {
+  font-family: "Rubik", sans-serif !important;
+  font-size: 3rem !important;
+}
 .hour-text {
   font-family: "Rubik", sans-serif !important;
   font-size: 1.5rem;
+}
+.hour-text-small {
+  font-family: "Rubik", sans-serif !important;
+  font-size: 1rem;
 }
 .small-text {
   font-size: 1rem;
